--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ buildscript {
         google()
         jcenter()
     }
+    
+    group = 'com.github.GerardBradshaw'
+
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
